test(intentum): add adversarial intent and cross-LLM consistency tests
- Add AdversarialIntentTests class to verify policy blocks and decisions for malicious event sequences
- Cover scenarios including excessive retries, many failed logins, suspicious velocities, and mixed benign/suspicious events
- Add CrossLLMConsistencyTests to check consistency of intents across different embedding providers using mocks
- Ensure pipeline produces valid intents with fixed score embeddings for cross-provider scenarios

docs: add agent framework integration guide (Faz 4)

- Introduce a new document explaining how to integrate Intentum with agent frameworks
- Describe adapter responsibilities: event mapping, space lifecycle, inference, and policy application
- Provide example adapter interface pseudo-code
- Outline target frameworks and usage scenarios

docs: add benchmark documentation and results

- Add benchmark overview and instructions for running benchmarks in multiple languages
- Include summary table of benchmarks for behavior vectorization, inference, and policy decision
- Add generated benchmark results file with performance metrics for core operations

docs: add clustering and experiments use case summaries

- Detail use cases for Intentum.Clustering (policy tuning, anomaly detection, dashboards)
- Detail use cases for Intentum.Experiments (A/B testing models and policies, rollout planning)
- Provide API usage hints and summaries in English and Turkish

docs: update coverage documentation with SonarCloud info and exclusions

- Describe SonarCloud quality gate metrics and status badges
- Explain coverage on new code requirement and issue fixing guidance
- Note exclusions including persistence adapters
- Document changes in English and Turkish manuals

docs: add cross-LLM consistency case study

- Explain the importance of measuring confidence and intent variance across embedding providers
- Provide steps to run cross-provider tests with real API keys
- Reference test verif

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,16 @@ inspection-results.xml
 inspection-results.json
 inspection-results.html
 
+## Local secrets (API keys, .env — never commit)
+.env
+.env.local
+*.env.local
+
+# .env.example is committed as a safe template (no secrets). Only .env is ignored.
+
+# Greenwashing case study: optional downloaded HTML (re-fetch with scripts/download-greenwashing-sources.sh)
+docs/case-studies/downloaded/
+
 ## IDE / OS
 .idea/
 .vscode/
