feat(azure-openai): add Azure OpenAI embedding provider with retry and rate limit handling
- Implement AzureOpenAIEmbeddingProvider with built-in retry for HTTP 429 status
- Throw AzureOpenAIRateLimitException on rate limit exhaustion with Retry-After info
- Update AzureOpenAIOptions to improve environment variable error messages and trimming
- Create integration tests for Azure OpenAI with real API key and model inference validation
- Add support for multiple optional LLM providers in .env.example including Azure, Gemini, Mistral, Claude
- Implement similar Gemini embedding provider with retry and rate limit exception
- Add integration tests for Gemini embedding provider validating real API key and inference
- Remove FusionCache embedding cache implementation and related extension methods
- Improve test environment loading via DotNetEnv for .env files
- Enhance BehaviorSpace serialization support for MongoDB and Redis storage compatibility
- Adjust sonarcloud configuration to exclude examples and optional modules from coverage
- Strengthen greenwashing case study tests with assertions replacing conditional skips
- Update benchmark docs to clarify caching options and remove FusionCache mention
- Refactor CI workflow to exclude integration tests by default to speed up runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,9 +60,11 @@ jobs:
 
       # Coverage: OpenCover report for SonarCloud. 80% target: SonarCloud Quality Gate
       # (project settings) and/or Intentum.Tests.csproj Coverlet Threshold=80.
+      # Exclude Integration tests (Category=Integration): require API keys, run locally or via integration-tests workflow.
       - name: Test
         run: >
           dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build
+          --filter "Category!=Integration"
           --collect:"XPlat Code Coverage;Format=opencover"
           --results-directory TestResults
 
