--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,7 +1,6 @@
-# Only analyze library source; exclude samples, docs, templates, tests.
-sonar.exclusions=**/samples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh
+# Only analyze library source; exclude samples, examples, docs, templates, tests (matches ci.yml).
+sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh
 
-# Exclude from coverage metric: CLI/tool and optional integration code not exercised by unit tests.
-# CodeGen = console tool; *Extensions = DI registration; Claude = optional provider.
-# This keeps "Coverage on New Code" aligned with tested library code (~80%).
-sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**
+# Exclude from coverage metric: CLI/tool and optional code not exercised by unit tests (matches ci.yml).
+# CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional.
+sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**
