--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,28 @@
-# Local OpenAI API key for integration tests (OpenAIIntegrationTests).
-# Copy this file to .env and set your key. .env is in .gitignore and will never be committed.
+# Local API keys for integration tests and VerifyAI. Copy to .env and set your keys.
+# .env is in .gitignore and will never be committed.
 #
+# --- OpenAI (Intentum.VerifyAI / OpenAIIntegrationTests) ---
 OPENAI_API_KEY=your-openai-api-key-here
 OPENAI_BASE_URL=https://api.openai.com/v1/
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+#
+# --- Azure OpenAI (optional; set for VerifyAI) ---
+# AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+# AZURE_OPENAI_API_KEY=your-azure-key
+# AZURE_OPENAI_EMBEDDING_DEPLOYMENT=embedding
+# AZURE_OPENAI_API_VERSION=2023-05-15
+#
+# --- Google Gemini (optional; set for VerifyAI) ---
+# GEMINI_API_KEY=your-gemini-key
+# GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta/
+# GEMINI_EMBEDDING_MODEL=text-embedding-004
+#
+# --- Mistral (optional; set for VerifyAI) ---
+# MISTRAL_API_KEY=your-mistral-key
+# MISTRAL_BASE_URL=https://api.mistral.ai/v1/
+# MISTRAL_EMBEDDING_MODEL=mistral-embed
+#
+# --- Claude (optional; env only; embedding provider is local mock) ---
+# CLAUDE_API_KEY=your-claude-key
+# CLAUDE_BASE_URL=https://api.anthropic.com/
+# CLAUDE_MODEL=claude-3-5-sonnet-20240620
