--- a/samples/Intentum.Sample/Intentum.Sample.csproj
+++ b/samples/Intentum.Sample/Intentum.Sample.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.0" />
   </ItemGroup>
 
