--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,11 +60,11 @@ jobs:
 
       # Coverage: OpenCover report for SonarCloud. 80% target: SonarCloud Quality Gate
       # (project settings) and/or Intentum.Tests.csproj Coverlet Threshold=80.
-      # Exclude Integration tests (Category=Integration): require API keys, run locally or via integration-tests workflow.
+      # Exclude Integration tests (Category=Integration) and GreenwashingCaseStudyTests (require downloaded data; no DataGreenwash/HTML in CI).
       - name: Test
         run: >
           dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build
-          --filter "Category!=Integration"
+          --filter "Category!=Integration&FullyQualifiedName\!~GreenwashingCaseStudyTests"
           --collect:"XPlat Code Coverage;Format=opencover"
           --results-directory TestResults
 
