--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -31,7 +31,7 @@ jobs:
           MinVerVersionOverride: ${{ github.event.inputs.version_override }}
         run: dotnet build Intentum.slnx -c Release --no-restore
       - name: Test
-        run: dotnet test tests/Intentum.Tests/Intentum.Tests.csproj -c Release --no-build
+        run: dotnet test tests/Intentum.Tests/Intentum.Tests.csproj -c Release --no-build --filter "Category!=Integration&FullyQualifiedName\!~GreenwashingCaseStudyTests"
       - name: Pack
         env:
           MinVerVersionOverride: ${{ github.event.inputs.version_override }}
