--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
             /o:"${{ env.SONAR_ORGANIZATION }}" \
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
+            /d:sonar.cs.opencover.reportsPaths="TestResults/coverage.opencover.xml" \
             /d:sonar.exclusions="**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh" \
             /d:sonar.coverage.exclusions="**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**"
 
@@ -67,6 +67,12 @@ jobs:
           --filter "Category!=Integration&FullyQualifiedName\!~GreenwashingCaseStudyTests"
           --collect:"XPlat Code Coverage;Format=opencover"
           --results-directory TestResults
+
+      # Copy coverage to fixed path so SonarCloud reliably finds it (TestResults/<guid>/coverage.opencover.xml → TestResults/coverage.opencover.xml).
+      - name: Prepare coverage for SonarCloud
+        run: |
+          COV=$(find TestResults -name 'coverage.opencover.xml' -print -quit 2>/dev/null)
+          if [ -n "$COV" ]; then cp "$COV" TestResults/coverage.opencover.xml; fi
 
       - name: SonarCloud end
         env:
