chore(ci): refine SonarCloud analysis scope and suppress warnings in samples
- Limit SonarCloud analysis to source files under src/** only
- Add sonar.inclusions property in sonarcloud configuration and CI workflow
- Suppress specific Sonar warnings in sample project files to avoid CI noise
- Adjust .editorconfig to disable Sonar S1075 warnings for intentional constants
- Simplify dictionary population logic in IntentAnalytics.cs for policy decision counts

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,13 @@ insert_final_newline = true
 
 [*.{cs,csx}]
 dotnet_sort_system_directives_first = true
+
+# Sonar: default API base URLs and path separators are intentional constants (S1075).
+[**/Intentum.AI.OpenAI/OpenAIOptions.cs]
+dotnet_diagnostic.S1075.severity = none
+
+[**/Intentum.AI.Gemini/GeminiOptions.cs]
+dotnet_diagnostic.S1075.severity = none
+
+[**/Intentum.AI.Mistral/MistralOptions.cs]
+dotnet_diagnostic.S1075.severity = none
