--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,4 +1,5 @@
-# Only analyze library source; exclude samples, examples, docs, templates, tests (matches ci.yml).
+# Only analyze library source (src/). Samples, examples, tests, etc. are out of scope so no analyzer warnings from them in CI.
+sonar.inclusions=src/**
 sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh
 
 # Exclude from coverage metric: CLI/tool and optional code not exercised by unit tests (matches ci.yml).
