--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,4 @@
-# Only analyze library source (src/). Samples, examples, tests, etc. are out of scope so no analyzer warnings from them in CI.
-sonar.inclusions=src/**
+# Exclude samples, examples, docs, tests from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
 sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh
 
 # Exclude from coverage metric: CLI/tool and optional code not exercised by unit tests (matches ci.yml).
