ci(sonar): update exclusions for SonarCloud analysis
- Add benchmarks, BenchmarkDotNet.Artifacts, and scripts folders to sonar exclusions
- Reflect exclusion changes in .sonarcloud.properties and GitHub Actions CI workflow
- Ensure analysis and coverage metrics exclude additional non-production code paths

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,5 @@
-# Exclude samples, examples, docs, tests from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
-sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh
+# Exclude samples, examples, docs, tests, benchmarks, scripts from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
+sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh
 
 # Exclude from coverage metric: CLI/tool and optional code not exercised by unit tests (matches ci.yml).
 # CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional.
