fix(ci): correct filter syntax in dotnet test command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           mkdir -p TestResults
           dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build \
-            --filter "FullyQualifiedName\!~GreenwashingCaseStudyTests&FullyQualifiedName\!~IntegrationTests" \
+            --filter 'FullyQualifiedName!~GreenwashingCaseStudyTests&FullyQualifiedName!~IntegrationTests' \
             -p:CollectCoverage=true \
             -p:CoverletOutput=../../TestResults/coverage \
             -p:CoverletOutputFormat=opencover \
