--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -2,5 +2,5 @@
 sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh
 
 # Exclude from coverage metric: CLI/tool, optional code, and exception/edge code not exercised by unit tests (matches ci.yml).
-# CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
-sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs
+# CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis/MultiTenancy = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
+sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs
