--- a/docs/tr/toc.yml
+++ b/docs/tr/toc.yml
@@ -1,60 +1,105 @@
-# Sol menü — Türkçe dokümanlar
+# Sol menü — Türkçe dokümanlar (gruplu, açılır/kapanır)
 items:
   - name: Ana Sayfa
     href: index.md
-  - name: Neden Intentum
-    href: why-intentum.md
-  - name: Manifesto
-    href: manifesto.md
-  - name: Intentum Canon
-    href: intentum-canon.md
-  - name: Neden Niyet ≠ Log
-    href: why-intent-not-logs.md
-  - name: Niyet Modelleri Tasarlama
-    href: designing-intent-models.md
-  - name: Gerçek Dünya Senaryoları
-    href: real-world-scenarios.md
-  - name: Yol haritası
-    href: roadmap.md
-  - name: Mimari
-    href: architecture.md
-  - name: Kurulum
-    href: setup.md
-  - name: Senaryolar
-    href: scenarios.md
-  - name: CodeGen
-    href: codegen.md
-  - name: Sağlayıcılar
-    href: providers.md
-  - name: AI sağlayıcılarını kullanma
-    href: ai-providers-howto.md
-  - name: Embedding API hata yönetimi
-    href: embedding-api-errors.md
-  - name: Üretim hazırlığı
-    href: production-readiness.md
-  - name: Gözlemlenebilirlik
-    href: observability.md
-  - name: Clustering ve Experiments kullanım senaryoları
-    href: clustering-and-experiments-use-cases.md
-  - name: Greenwashing tespiti (how-to)
-    href: greenwashing-detection-howto.md
-  - name: Domain intent şablonları
-    href: domain-intent-templates.md
-  - name: Açıklanabilirlik
-    href: explainability.md
-  - name: Benchmark'lar
-    href: benchmarks.md
-  - name: Test
-    href: testing.md
-  - name: Yerel entegrasyon testleri
-    href: local-integration-tests.md
-  - name: Kitle
-    href: audience.md
-  - name: Kapsam
-    href: coverage.md
-  - name: API
-    href: api.md
-  - name: Gelişmiş Özellikler
-    href: advanced-features.md
-  - name: Agent framework entegrasyonu
-    href: agent-framework-integration.md
+  - name: Başlarken
+    expanded: false
+    items:
+      - name: Neden Intentum
+        href: why-intentum.md
+      - name: Manifesto
+        href: manifesto.md
+      - name: Neden Niyet ≠ Log
+        href: why-intent-not-logs.md
+      - name: Kurulum
+        href: setup.md
+  - name: Kavramlar
+    expanded: false
+    items:
+      - name: Intentum Canon
+        href: intentum-canon.md
+      - name: Niyet Modelleri Tasarlama
+        href: designing-intent-models.md
+      - name: Mimari
+        href: architecture.md
+      - name: Gerçek Dünya Senaryoları
+        href: real-world-scenarios.md
+      - name: Yol haritası
+        href: roadmap.md
+  - name: Kurulum ve Sağlayıcılar
+    expanded: false
+    items:
+      - name: Senaryolar
+        href: scenarios.md
+      - name: CodeGen
+        href: codegen.md
+      - name: Sağlayıcılar
+        href: providers.md
+      - name: AI sağlayıcılarını kullanma
+        href: ai-providers-howto.md
+      - name: Embedding API hata yönetimi
+        href: embedding-api-errors.md
+  - name: Özellikler
+    expanded: false
+    items:
+      - name: Üretim hazırlığı
+        href: production-readiness.md
+      - name: Gözlemlenebilirlik
+        href: observability.md
+      - name: Açıklanabilirlik
+        href: explainability.md
+      - name: Clustering ve Experiments
+        href: clustering-and-experiments-use-cases.md
+      - name: Domain intent şablonları
+        href: domain-intent-templates.md
+      - name: Gelişmiş Özellikler
+        href: advanced-features.md
+      - name: Agent framework entegrasyonu
+        href: agent-framework-integration.md
+  - name: Nasıl Yapılır
+    expanded: false
+    items:
+      - name: Greenwashing tespiti
+        href: greenwashing-detection-howto.md
+  - name: Örnekler
+    expanded: false
+    items:
+      - name: Örnekler rehberi (Basit / Orta / Zor)
+        href: examples-overview.md
+      - name: Özellikler — basit rehber (her özellik ne işe yarar)
+        href: features-simple-guide.md
+  - name: Test ve Kalite
+    expanded: false
+    items:
+      - name: Test
+        href: testing.md
+      - name: Testler özeti
+        href: tests-overview.md
+      - name: Yerel entegrasyon testleri
+        href: local-integration-tests.md
+      - name: Benchmark'lar
+        href: benchmarks.md
+      - name: Kapsam
+        href: coverage.md
+      - name: Kitle
+        href: audience.md
+  - name: Örnek Olaylar
+    expanded: false
+    items:
+      - name: Örnek olaylar indeksi
+        href: ../case-studies/README.md
+      - name: Yük testi (infer)
+        href: ../case-studies/load-test-infer.md
+      - name: Benchmark sonuçları
+        href: ../case-studies/benchmark-results.md
+      - name: Cross-LLM tutarlılık
+        href: ../case-studies/cross-llm-consistency.md
+      - name: Greenwashing metrikleri
+        href: ../case-studies/greenwashing-metrics.md
+  - name: API Referansı
+    expanded: false
+    items:
+      - name: API özeti
+        href: api.md
+  - name: API (üretilmiş)
+    href: ../api/toc.yml
