--- a/src/Intentum.Analytics/Intentum.Analytics.csproj
+++ b/src/Intentum.Analytics/Intentum.Analytics.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Intentum.Persistence\Intentum.Persistence.csproj" />
+    <ProjectReference Include="..\Intentum.Runtime\Intentum.Runtime.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
