--- a/src/Intentum.Explainability/Intentum.Explainability.csproj
+++ b/src/Intentum.Explainability/Intentum.Explainability.csproj
@@ -17,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Intentum.Core\Intentum.Core.csproj" />
+    <ProjectReference Include="..\Intentum.Runtime\Intentum.Runtime.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
