--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,6 +1,6 @@
 # Exclude samples, examples, docs, tests, benchmarks, scripts from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
 sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh
 
-# Exclude from coverage metric: CLI/tool, optional code, and exception/edge code not exercised by unit tests (matches ci.yml).
-# CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis/MultiTenancy = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
-sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs
+# Exclude from coverage metric: CLI/tool, DI/optional adapters, edge code. No exclusion of core libs; coverage is honest (see docs/test-plan.md).
+# CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
+sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs
