--- a/tests/Intentum.Tests/Intentum.Tests.csproj
+++ b/tests/Intentum.Tests/Intentum.Tests.csproj
@@ -5,8 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <!-- CI: total line coverage floor. SonarCloud enforces 80% on new code. Total ~68% (Persistence/Explainability/Simulation low); raise threshold as coverage improves. -->
-    <Threshold>68</Threshold>
+    <!-- CI: total line coverage. Target 80%; baseline 70 until test plan (docs/test-plan.md) is executed; no file exclusions. -->
+    <Threshold>70</Threshold>
     <ThresholdType>line</ThresholdType>
     <ThresholdStat>total</ThresholdStat>
   </PropertyGroup>
