refactor(core): replace Array.Empty with empty array literals and improve code clarity
- Use [] instead of Array.Empty<T>() for empty collections in multiple places for consistency
- Refactor duplicate inline BehaviorSpace construction into a reusable method
- Extract event processing logic in FraudLive.razor and Sustainability.razor into async helper methods
- Change C# collection initializations from {} to [] for better readability in sample projects
- Stabilize SonarCloud new code reference branch to master to prevent baseline drift
- Update GitHub workflow to read sonar exclusions dynamically from properties file
- Use "using" declaration for CancellationTokenSource to ensure proper disposal
- Change some List initializations from new() to new [] for explicitness
- Modify Intents and SignalContribution related code to use [] instead of Array.Empty
- Add minor style improvements such as changing severity level in Rider settings and formatting arrays consistently

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,14 @@ jobs:
           mkdir -p .sonar/scanner
           dotnet tool install dotnet-sonarscanner --tool-path .sonar/scanner
 
+      - name: Read Sonar exclusions from .sonarcloud.properties
+        id: sonar-props
+        run: |
+          EXCL=$(grep '^sonar.exclusions=' .sonarcloud.properties | cut -d= -f2- | tr -d '\r')
+          COVEXCL=$(grep '^sonar.coverage.exclusions=' .sonarcloud.properties | cut -d= -f2- | tr -d '\r')
+          echo "exclusions=$EXCL" >> "$GITHUB_OUTPUT"
+          echo "coverage_exclusions=$COVEXCL" >> "$GITHUB_OUTPUT"
+
       - name: SonarCloud begin
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -49,8 +57,8 @@ jobs:
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.cs.opencover.reportsPaths="${{ github.workspace }}/TestResults/coverage.opencover.xml" \
-            /d:sonar.exclusions="**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh" \
-            /d:sonar.coverage.exclusions="**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**,**/Intentum.Observability/**,**/Intentum.Analytics/**"
+            /d:sonar.exclusions="${{ steps.sonar-props.outputs.exclusions }}" \
+            /d:sonar.coverage.exclusions="${{ steps.sonar-props.outputs.coverage_exclusions }}"
 
       - name: Restore
         run: dotnet restore Intentum.slnx
