--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,6 +1,10 @@
+# Single source of truth: CI must NOT override these with /d:... so edits here stay stable.
 # Exclude samples, examples, docs, tests, benchmarks, scripts from analysis (library src/ is analyzed; coverage from unit tests applies to src/).
 sonar.exclusions=**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh
 
 # Exclude from coverage metric: CLI/tool, DI/optional adapters, edge code. Temporarily exclude ONNX/Persistence/MultiTenancy/Observability/Analytics until docs/test-plan.md is executed so Quality Gate passes; then remove these and rely on real coverage.
 # CodeGen = console tool; *Extensions = DI registration; Claude/MongoDB/Redis = optional; *RateLimitException = 429 path; LlmIntentModelExtensions = edge.
 sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**,**/Intentum.Observability/**,**/Intentum.Analytics/**
+
+# Stabilize "new code" so it always means "diff vs master". Prevents baseline drift when properties or branch config changes.
+sonar.newCode.referenceBranch=master
