--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,20 +39,9 @@ jobs:
           mkdir -p .sonar/scanner
           dotnet tool install dotnet-sonarscanner --tool-path .sonar/scanner
 
-      - name: Read Sonar exclusions from .sonarcloud.properties
-        id: sonar-props
-        run: |
-          EXCL=$(grep '^sonar.exclusions=' .sonarcloud.properties | cut -d= -f2- | tr -d '\r')
-          COVEXCL=$(grep '^sonar.coverage.exclusions=' .sonarcloud.properties | cut -d= -f2- | tr -d '\r')
-          echo "exclusions=$EXCL" >> "$GITHUB_OUTPUT"
-          echo "coverage_exclusions=$COVEXCL" >> "$GITHUB_OUTPUT"
-          echo "Exclusions length: ${#EXCL}, coverage exclusions length: ${#COVEXCL}"
-
       - name: SonarCloud begin
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_EXCLUSIONS: ${{ steps.sonar-props.outputs.exclusions }}
-          SONAR_COVERAGE_EXCLUSIONS: ${{ steps.sonar-props.outputs.coverage_exclusions }}
         run: |
           .sonar/scanner/dotnet-sonarscanner begin \
             /k:"${{ env.SONAR_PROJECT_KEY }}" \
@@ -60,8 +49,9 @@ jobs:
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.cs.opencover.reportsPaths="${{ github.workspace }}/TestResults/coverage.opencover.xml" \
-            /d:sonar.exclusions="$SONAR_EXCLUSIONS" \
-            /d:sonar.coverage.exclusions="$SONAR_COVERAGE_EXCLUSIONS"
+            /d:sonar.exclusions="**/samples/**,**/examples/**,**/docs/**,**/templates/**,**/tools/**,**/.github/**,**/tests/**,**/benchmarks/**,**/BenchmarkDotNet.Artifacts/**,**/scripts/**,**/release.sh" \
+            /d:sonar.coverage.exclusions="**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**,**/Intentum.Persistence.MongoDB/**,**/Intentum.Persistence.Redis/**,**/Intentum.MultiTenancy/**,**/*RateLimitException.cs,**/LlmIntentModelExtensions.cs,**/Intentum.AI.ONNX/**,**/Intentum.Persistence/**,**/Intentum.Observability/**,**/Intentum.Analytics/**"
+          # Exclusions duplicated here on purpose so CI is stable. Keep in sync with .sonarcloud.properties when changing.
 
       - name: Restore
         run: dotnet restore Intentum.slnx
